[package]
name = "cargo-tally"
version = "1.0.8"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Cargo subcommand for drawing graphs of the number of dependencies on a crate over time"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/cargo-tally"

[lib]
path = "src/hidden.rs"

[dependencies]
abomonation = "0.7"
atty = "0.2"
anyhow = "1.0"
bytesize = "1.0"
cargo-subcommand-metadata = "0.1"
chrono = "0.4"
clap = { version = "3.2.5", features = ["deprecated"] }
db-dump = "0.3.1"
differential-dataflow = { version = "0.12", default-features = false }
minipre = "0.2"
num_cpus = "1.0"
once_cell = "1.8"
opener = "0.5"
ref-cast = "1.0"
regex = "1.5"
semver = "1.0"
serde = "1.0"
sysinfo = { version = "0.25", default-features = false }
termcolor = "1.1"
thiserror = "1.0"
timely = { version = "0.12", default-features = false }
typed-arena = "2.0"
