[package]
name = "cargo-tally"
version = "1.0.27"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Cargo subcommand for drawing graphs of the number of dependencies on a crate over time"
edition = "2021"
keywords = ["cargo", "subcommand"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cargo-tally"
rust-version = "1.65"

[lib]
path = "src/hidden.rs"

[dependencies]
abomonation = "0.7"
anyhow = "1.0"
atomic-take = "1.0"
bytesize = "1.0"
cargo-subcommand-metadata = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["deprecated"] }
db-dump = "0.4"
differential-dataflow = { version = "0.12", default-features = false }
is-terminal = "0.4"
minipre = "0.2"
num_cpus = "1.0"
once_cell = "1.8"
opener = "0.6"
ref-cast = "1.0"
regex = { version = "1.9.2", default-features = false, features = ["std", "perf"] }
semver = "1.0"
serde = "1.0"
sysinfo = { version = "0.29", default-features = false }
termcolor = "1.1"
thiserror = "1.0"
timely = { version = "0.12", default-features = false }
typed-arena = "2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
