[package]
name = "cargo-tally"
version = "1.0.59"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Cargo subcommand for drawing graphs of the number of dependencies on a crate over time"
edition = "2021"
keywords = ["cargo", "subcommand"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cargo-tally"
rust-version = "1.70"

[lib]
path = "src/hidden.rs"

[dependencies]
abomonation = "0.7"
anyhow = "1.0.79"
atomic-take = "1.0"
bytesize = "1.0"
cargo-subcommand-metadata = "0.1"
chrono = "0.4.35"
clap = { version = "4", features = ["deprecated"] }
db-dump = "0.7.11"
differential-dataflow-master = { version = "=0.13.0-dev.1", default-features = false }
foldhash = "0.1"
minipre = "0.2"
num_cpus = "1.0"
opener = "0.7"
ref-cast = "1.0"
regex = { version = "1.9.2", default-features = false, features = ["perf", "std"] }
semver = "1.0"
serde = "1.0.194"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
termcolor = "1.1"
thiserror = "2"
timely-master = { version = "=0.13.0-dev.1", default-features = false }
typed-arena = "2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
