[package]
name = "cratesio-index"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
cargo-tally = { path = ".." }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
git2 = "0.13"
indicatif = "0.16"
lazy_static = "1.3"
regex = "1.1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
